--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,156 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  height: 100%;
+  width: 100%;
+  font-family: cursive;
+  background: linear-gradient(90deg,  #fac24a, rgb(196, 245, 122)); 
+}
+.main-container{
+  height: auto;
+  width:100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+  background-color: #fac24a;
+  font-family: cursive;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+.main-container2{
+  /* display: flex;
+  flex-wrap: wrap; */
+  width:100%;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+
+  padding: 25px;
+}
+.tag-p1{
+  
+  width: 80%;
+  margin: auto;
+  gap: 2rem;
+  border-bottom: 2px solid ;
+  display: flex;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  text-align: center;
+ 
+}
+.p-box{
+  border: 2px solid;
+  padding: 15px;
+ text-align: center;
+justify-content: center;
+ border-radius: 15px 50px;
+ box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+ background-color: #fac24a; 
+ font-family:cursive
+
+}
+.start-btn{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  
+}
+.start-btn1{
+  font-size:25px; margin:7px;  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3); border-radius:5px ;border-radius: 50% 20% / 10% 40%;
+}
+.start-btn1:hover{
+  opacity: .8;
+}
+.start-btn-main{
+  
+  margin: auto;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   grid-gap: 1rempx;
+   text-align: center;  
+   padding: 40px 0 0 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fonts-main{
+  margin: auto;
+   font-size: 45px;
+  width: 90%;
+  text-align: center;
+  
+
 }
+.fonts{
+  margin-left: 20px;
+}
+.twoplayer{
+justify-content: center;
+text-align: center;
+}
+
+.game-img{
+  height: 80px;
+  width: 80px;
+  border-radius: 50% 20% / 10% 40%;
+border: 1px solid;
+margin: 4px;
+}
+.round-change{
+  height: 50px;
+  width: 80px; border-radius: 20% / 40%;
+}
+.video1{
+  height: 15rem;
+}
+.video2{
+  height: 15rem;
+-webkit-transform:scaleX(-1);
+}
+.video-main{
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+ width:70% ;
+  height:18rem;
+  display: grid;
+  grid-template-columns: 1fr 0fr;
+ 
+}
+.countdown{
+  text-align: center;
+  margin: auto;
+  justify-content: center;font-family:cursive;
+  font-size:xx-large;
+  font-weight: 500;
+  color: rgb(128, 62, 55);
+ 
+  
+ }
+.game-div-main{
+ width: 60%;
+ margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  text-align: center;  
+  padding: 40px 0 0 0;
+}
+.main-footer{
+  text-align: center;
+  background-color: #fac24a;
+  border: 2px solid #fac24a;
+  margin: auto;
+margin-top: 8px;
+  height:5rem ;
+}
+.para-player{
+  font-size:1.4rem ;
+  font-weight: bold;
+}
+
+.result{
+  text-align:center;
+  font-weight:bold;
+  font-size: 1.5rem;
+}
+
