--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   height: 100vh;
   width:auto;
-  font-family: cursive;
+  font-family: monospace;
   background: linear-gradient(90deg,  #fac24a, rgb(196, 245, 122)); 
 }
 .main-container{
@@ -12,7 +12,6 @@ body{
   margin: auto;
   justify-content: center;
   background-color: #fac24a;
-  font-family: cursive;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
@@ -46,7 +45,6 @@ justify-content: center;
  border-radius: 15px 50px;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
  background-color: #fac24a; 
- font-family:cursive
 
 }
 .start-btn{
@@ -119,7 +117,7 @@ margin: 4px;
 .countdown{
 
   margin: auto;
-  justify-content: center;font-family:cursive;
+  justify-content: center;
   font-size:xx-large;
   font-weight: 500;
   color: rgb(128, 62, 55);
